[workspace]
members = [
    "lance-arrow",
    "lance-core",
    "lance-index",
    "lance-linalg",
    "lance-testing",
    "lance-test-macros",
    "lance",
]
# Python package needs to be built by maturin.
resolver = "2"

[workspace.package]
version = "0.8.3"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
license = "Apache-2.0"
repository = "https://github.com/lancedb/lance"
readme = "README.md"
description = "A columnar data format that is 100x faster than Parquet for random access."
keywords = [
    "data-format",
    "data-science",
    "machine-learning",
    "apache-arrow",
    "data-analytics",
]
categories = [
    "database-implementations",
    "data-structures",
    "development-tools",
    "science",
]
rust-version = "1.65"

[workspace.dependencies]
lance-arrow = { version = "=0.8.3", path = "./lance-arrow" }
lance-core = { version = "=0.8.3", path = "./lance-core" }
lance-index = { version = "=0.8.3", path = "./lance-index" }
lance-linalg = { version = "=0.8.3", path = "./lance-linalg" }
lance-testing = { version = "=0.8.3", path = "./lance-testing" }
lance-test-macros = { version = "=0.8.3", path = "./lance-test-macros" }
# Note that this one does not include pyarrow
arrow = { version = "46.0.0", optional = false }
arrow-arith = "46.0"
arrow-array = "46.0"
arrow-buffer = "46.0"
arrow-cast = "46.0"
arrow-data = "46.0"
arrow-ipc = { version = "46.0", features = ["zstd"] }
arrow-ord = "46.0"
arrow-row = "46.0"
arrow-schema = "46.0"
arrow-select = "46.0"
half = { "version" = "=2.2.1", default-features = false, features = [
    "num-traits",
] }
approx = "0.5.1"
criterion = { version = "0.5", features = ["async", "async_tokio"] }
datafusion-common = "31.0"
datafusion-sql = "31.0"
either = "1.0"
futures = "0.3"
log = "0.4"
num_cpus = "1.0"
num-traits = "0.2"
object_store = { version = "0.6.1", features = ["aws", "gcp", "azure"] }
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }
prost = "0.10"
prost-types = "0.10"
rand = { version = "0.8.3", features = ["small_rng"] }
serde = { version = "^1" }
serde_json = { version = "1" }
snafu = "0.7.4"
tempfile = "3"
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
url = "2.3"

[profile.bench]
opt-level = 3
debug = true
strip = false
