[workspace]
members = [
    "lance-arrow",
    "lance-core",
    "lance-datagen",
    "lance-index",
    "lance-linalg",
    "lance-testing",
    "lance-test-macros",
    "lance",
]
# Python package needs to be built by maturin.
resolver = "2"

[workspace.package]
version = "0.8.11"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
license = "Apache-2.0"
repository = "https://github.com/lancedb/lance"
readme = "README.md"
description = "A columnar data format that is 100x faster than Parquet for random access."
keywords = [
    "data-format",
    "data-science",
    "machine-learning",
    "apache-arrow",
    "data-analytics",
]
categories = [
    "database-implementations",
    "data-structures",
    "development-tools",
    "science",
]
rust-version = "1.70"

[workspace.dependencies]
lance-arrow = { version = "=0.8.11", path = "./lance-arrow" }
lance-core = { version = "=0.8.11", path = "./lance-core" }
lance-datagen = { version = "=0.8.11", path = "./lance-datagen" }
lance-index = { version = "=0.8.11", path = "./lance-index" }
lance-linalg = { version = "=0.8.11", path = "./lance-linalg" }
lance-test-macros = { version = "=0.8.11", path = "./lance-test-macros" }
lance-testing = { version = "=0.8.11", path = "./lance-testing" }
approx = "0.5.1"
# Note that this one does not include pyarrow
arrow = { version = "47.0.0", optional = false }
arrow-arith = "47.0"
arrow-array = "47.0"
arrow-buffer = "47.0"
arrow-cast = "47.0"
arrow-data = "47.0"
arrow-ipc = { version = "47.0", features = ["zstd"] }
arrow-ord = "47.0"
arrow-row = "47.0"
arrow-schema = "47.0"
arrow-select = "47.0"
async-recursion = "1.0"
async-trait = "0.1"
aws-config = "0.56"
aws-credential-types = "0.56"
aws-sdk-dynamodb = "0.34"
half = { "version" = "=2.3.1", default-features = false, features = [
    "num-traits",
] }
bytes = "1.4"
byteorder = "1.5"
chrono = "0.4.23"
criterion = { version = "0.5", features = ["async", "async_tokio"] }
datafusion-common = "32.0"
datafusion-sql = "32.0"
either = "1.0"
futures = "0.3"
http = "0.2.9"
lazy_static = "1"
log = "0.4"
mock_instant = { version = "0.3.1", features = ["sync"] }
moka = "0.11"
num_cpus = "1.0"
num-traits = "0.2"
object_store = { version = "0.7.1", features = ["aws", "gcp", "azure"] }
parquet = "47.0"
pin-project = "1.0"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
rand = { version = "0.8.3", features = ["small_rng"] }
roaring = "0.10.1"
serde = { version = "^1" }
serde_json = { version = "1" }
shellexpand = "3.0"
snafu = "0.7.4"
tempfile = "3"
tokio = { version = "1.23", features = ["rt-multi-thread", "macros", "fs", "sync"] }
tracing = "0.1"
url = "2.3"
uuid = { version = "1.2", features = ["v4", "serde"] }

[profile.bench]
opt-level = 3
debug = true
strip = false
