[package]
name = "jlance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jlance"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "32.0.0", features = ["ffi","pyarrow"] }
jni = "0.21.0"
lance = { path = "../rust"}
futures = "0.3"


[build-dependencies]
prost-build = "0.11"