[package]
name = "duckdb-lance"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = { path = "../../rust" }
duckdb-ext = { path = "./duckdb-ext" }
libduckdb-sys = "0.6.1"
lazy_static = "1.4.0"
tokio = { version = "1.23", features = ["rt-multi-thread"] }
arrow-schema = "31.0.0"
arrow-array = "31.0.0"
futures = "0.3"

[lib]
name = "duckdb_lance"
crate-type = ["staticlib"]
