[package]
name = "duckdb-lance"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = { path = "../../rust/lance" }
duckdb-ext = { path = "./duckdb-ext" }
lazy_static = "1.4.0"
tokio = { version = "1.23", features = ["rt-multi-thread"] }
arrow-schema = "49.0.0"
arrow-array = "49.0.0"
futures = "0.3"
num-traits = "0.2"

[dev-dependencies]
libduckdb-sys = { version = "0.8.1", features = ["bundled"] }

[lib]
name = "duckdb_lance"
crate-type = ["staticlib"]
