[package]
name = "lance-datafusion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Internal utilities used by other lance modules to simplify working with datafusion"

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
arrow-ord.workspace = true
async-trait.workspace = true
datafusion.workspace = true
datafusion-common.workspace = true
datafusion-functions.workspace = true
datafusion-physical-expr.workspace = true
datafusion-substrait = { version = "37.0", optional = true }
futures.workspace = true
lance-arrow.workspace = true
lance-core = { workspace = true, features = ["datafusion"] }
log.workspace = true
prost.workspace = true
snafu.workspace = true
tokio.workspace = true

[dev-dependencies]
substrait-expr = { version = "0.2.1" }

[features]
substrait = ["dep:datafusion-substrait"]
