[package]
categories.workspace = true
description = "Internal utilities used by other lance modules to simplify working with datafusion"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "lance-datafusion"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
arrow = {workspace = true, features = ["ffi"]}
arrow-array = {workspace = true, features = ["ffi"]}
arrow-buffer.workspace = true
arrow-ord.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
async-trait.workspace = true
datafusion-common.workspace = true
datafusion-functions.workspace = true
datafusion-physical-expr.workspace = true
datafusion-substrait = {workspace = true, optional = true}
datafusion.workspace = true
futures.workspace = true
jsonb = {workspace = true}
lance-arrow.workspace = true
lance-core = {workspace = true, features = ["datafusion"]}
lance-datagen.workspace = true
chrono.workspace = true
log.workspace = true
pin-project.workspace = true
prost.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
lance-datagen.workspace = true
substrait-expr = {version = "0.2.3"}

[features]
substrait = ["dep:datafusion-substrait"]

[lints]
workspace = true
