[package]
name = "lance-encoding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Encoders and decoders for the Lance file format"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
lance-arrow.workspace = true
lance-core.workspace = true
lance-datagen.workspace = true
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-cast.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
bytes.workspace = true
futures.workspace = true
log.workspace = true
num_cpus.workspace = true
prost.workspace = true
prost-types.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
test-log.workspace = true
criterion = { workspace = true }

[build-dependencies]
prost-build.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { workspace = true }

[[bench]]
name = "decoder"
harness = false
