[package]
name = "lance-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Utilities for the Lance file format"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
lance-arrow.workspace = true
lance-core.workspace = true
lance-encoding.workspace = true
lance-io.workspace = true
arrow-arith.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
bytes.workspace = true
datafusion-common.workspace = true
futures.workspace = true
num_cpus.workspace = true
num-traits.workspace = true
object_store.workspace = true
prost.workspace = true
prost-types.workspace = true
roaring.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
proptest.workspace = true

[build-dependencies]
prost-build.workspace = true
