[package]
name = "lance-geo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
datafusion.workspace = true
geo-traits.workspace = true
geo-types.workspace = true
geoarrow-array.workspace = true
geoarrow-schema.workspace = true
geodatafusion.workspace = true
lance-core.workspace = true
serde.workspace = true

[lints]
workspace = true
